@@ -31,7 +31,7 @@ clean:
 	rm -f build-stamp configure-stamp
 
 	# Add here commands to clean up after the build process.
-	#-$(MAKE) clean
+	-$(MAKE) clean
 
 	-rm -f debian/files
 
@@ -47,8 +47,8 @@ install: build
 	$(MAKE) DESTDIR=$(CURDIR)/debian/itaka/usr install
 
 	# And other miscellaneous tasks
-	/usr/bin/convert share/images/itaka32x32.png debian/itaka/usr/share/pixmaps/itaka.xpm
-	/usr/bin/convert share/images/itaka16x16.png debian/itaka/usr/share/pixmaps/itaka16x16.xpm
+	/usr/bin/convert share/images/itaka.png -resize 32x32 debian/itaka/usr/share/pixmaps/itaka.xpm
+	/usr/bin/convert share/images/itaka.png -resize 16x16 debian/itaka/usr/share/pixmaps/itaka16x16.xpm
 
 # Build architecture-independent files here.
 binary-arch: build install
